# cxxtc

./: Makefile  README.md  TODO.md  vcpkg.json
examples/: CMakeLists.txt  parse_list.example.cpp  timecode_basic-increment.example.cpp
include/: timecode_basic.hpp  timecode_common.hpp
src/: test.cpp  test.hpp  timecode.hpp
tests/: test.cpp  test.hpp  timecode.test.cpp
